--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -12,7 +12,7 @@ jobs:
       image: goreleaser/goreleaser-cross:v1.21
     steps:
       - run: |
-          git config --global --add safe.directory /__w/agent/agent
+          git config --global --add safe.directory /__w/pseudo-nezha-agent/pseudo-nezha-agent
       - uses: actions/checkout@master
         with:
           fetch-depth: 0
